2008-08-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/NodeSetEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/TypeSelector.cs,
	  MonoDevelop.AddinAuthoring/ExtensionPointsEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/ExtensionEditorWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinDescriptionWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinOptionPanelWidget.cs,
	  MonoDevelop.AddinAuthoring/AddinFeatureWidget.cs,
	  MonoDevelop.AddinAuthoring/CellRendererExtension.cs,
	  MonoDevelop.AddinAuthoring/RegistrySelector.cs,
	  MonoDevelop.AddinAuthoring.NodeBuilders/AddinFolderNodeBuilder.cs,
	  MonoDevelop.AddinAuthoring.mdp, gtk-gui/objects.xml: Use new model
	  for exporting stetic widgets.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs,
	  MonoDevelop.AddinAuthoring/AddinData.cs,
	  MonoDevelop.AddinAuthoring/RegistryExtensionNode.cs: Moved
	  serialization engine to MonoDevelop.Core. Use new syntax for
	  specifying attribute scope.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* configure, MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.

2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs: Track api
	  changes.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring.addin.xml: Merged the extension points for
	  project and solution option panels into a single extension point. A
	  single extension point will now be used for all kinds of items.
	  Extension conditions can be used to make panels visible only for
	  some specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AddinAuthoring/AddinProjectExtension.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when