@@ -35,6 +35,7 @@ using MonoDevelop.Ide.Gui.Pads;
 using MonoDevelop.Ide.Gui.Pads.ProjectPad;
 using MonoDevelop.Components.Commands;
 using Mono.Addins.Description;
+using MonoDevelop.Ide.Gui.Components;
 using Gtk;
 
 namespace MonoDevelop.AddinAuthoring
